[package]
name = "mtxia"
version = "0.1.0"
authors = ["Ricardo M. Augusto <rmaugusto@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[profile.dev.package.'*']
opt-level = 3

[dependencies]
bevy = "0.3.0"
bevy_prototype_lyon = "0.1.3"
rand = "0.7"
tiled = "0.9.3"
tch = "0.3.0"
serde = "1.0.118"
serde_yaml = "0.8.14"
chrono = "0.4"
